--- a/css/query.css
+++ b/css/query.css
@@ -44,6 +44,9 @@
   #FORM .icon-row {
     width: 50%;
   }
+  #FORM {
+    height: 150vh;
+  }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   html {
