--- a/css/query.css
+++ b/css/query.css
@@ -1,3 +1,37 @@
+@media (min-width: 200px) and (max-width: 399px) {
+  html {
+    font-size: 14px;
+  }
+  .counter {
+    height: 800px;
+  }
+  .counter .counter-box {
+    height: 200px;
+  }
+  .caption-vip {
+    position: absolute;
+    right: 15%;
+    top: 9rem;
+
+    left: 15%;
+    padding-top: 0.25rem;
+    padding-bottom: 1.25rem;
+    color: #fff;
+    text-align: center;
+  }
+  #FORM .icon-row {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #FORM {
+    height: 144vh;
+    padding-top: 70px;
+  }
+  .contact-details .btn button {
+    width: 203%;
+  }
+}
 @media (min-width: 400px) and (max-width: 767px) {
   html {
     font-size: 14px;
